# multiai-tts

./: README.md  pyproject.toml
dev/: test.sh  upload.sh
src/multiai_tts/: __init__.py  prompt.py
tests/: test_prompt.py
